--- a/styles/typographystyles.css
+++ b/styles/typographystyles.css
@@ -48,14 +48,34 @@
    text-align: right;
 }
 
-#justify {
-  /* Use the text-align property to justify the text
-   http://www.w3schools.com/cssref/pr_text_text-align.asp */
-  text-align: justify;
+
+/* Place this at the very top of your typographystyles.css document */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+
+/* Place these styles towards the bottom of your typographystyles.css document */
+
+.weights {
+  font-family: "Roboto";
+  font-size: 32px;
 }
 
-#center {
-  /* Use the text-align property to justify the text
-   http://www.w3schools.com/cssref/pr_text_text-align.asp */
-   text-align: center;
+#weight1 {
+  /* Change the font-weight property to give it a thin-weight */
+}
+
+#weight2 {
+  /* Change the font-weight property to give it a light-weight */
+}
+
+#weight3 {
+  /* Change the font-weight property to give it a regular-weight */
+}
+
+#weight4 {
+  /* Change the font-weight property to give it a bold-weight */
+}
+
+#weight5 {
+  /* Change the font-weight property to give it a ultra-bold-weight */
 }
